# hachis

./: .gitattributes  CHANGES.md  Makefile  README.md  TODO.md  dune-project  header.txt
attic/: Signatures.cppo.ml  Table.cppo.ml  announcement.md
benchmark/HashSet/: .gitignore  Makefile  dune  main.cppo.ml
benchmark/HashSet/results/: comparing-insertion-functions.out
benchmark/HashSet/saved-results/: absent-insertions-replace.out  comparing-insertion-functions-with-tombstones.out  deletions.out  everything.out  lookups-tombstones.out  lookups.out
benchmark/common/: Benchmark.ml  Benchmark.mli  Command.ml  Command.mli
src/: HashMap.cppo.mli  HashMap.mli  HashSet.cppo.mli  HashSet.ml  HashSet.mli  Signatures.cppo.ml  Signatures.ml  Table.cppo.ml  dune  index.mld
test/: Makefile
test/HashMap/: Makefile  dune  reference.ml  test.ml
test/HashSet/: dune-workspace.afl  reference.ml  test.ml
test/HashSet/input/: dummy
test/show/: dune  show.ml  show.ref
test/statistics/: Makefile  dune  statistics.ml  statistics.ref
