;; This is a library.
(library
  (name hachis)
  (public_name hachis)
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44))
  (release (flags :standard -noassert ))
)

;; Some files require preprocessing by cppo.

(rule
  (targets HashSet.ml)
  (deps Table.cppo.ml)
  (action (run %{bin:cppo} -D SET %{deps} -o %{targets})))

(rule
  (targets HashMap.ml)
  (deps Table.cppo.ml)
  (action (run %{bin:cppo} -D MAP %{deps} -o %{targets})))

;; Request documentation.
(documentation)
