;; This is a library.
(library
  (name hachis)
  (public_name hachis)
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44))
  (release (flags :standard -noassert ))
)

;; Some files require preprocessing by cppo.

;; The source file HashSet.cppo.ml is preprocessed twice, with different
;; preprocessor settings, to obtain HashSet.ml and HashMap.ml.

(rule
  (targets HashSet.ml)
  (deps Signatures.cppo.ml)
  (action (run %{bin:cppo} %{dep:Table.cppo.ml} -o %{targets})))

(rule
  (targets HashMap.ml)
  (deps Signatures.cppo.ml)
  (action (run %{bin:cppo} -D ENABLE_MAP %{dep:Table.cppo.ml} -o %{targets})))

;; Each of the source files HashSet.cppo.mli and HashMap.cppo.mli is
;; preprocessed independently to obtain HashSet.mli and HashMap.mli.

(rule
  (targets HashSet.mli)
  (deps Signatures.cppo.ml)
  (action (run %{bin:cppo} %{dep:HashSet.cppo.mli} -o %{targets})))

(rule
  (targets HashMap.mli)
  (deps Signatures.cppo.ml)
  (action (run %{bin:cppo} %{dep:HashMap.cppo.mli} -o %{targets})))

;; Request documentation.
(documentation)
